[gd_scene load_steps=9 format=3 uid="uid://fg5sus138qia"]

[ext_resource type="PackedScene" uid="uid://bds4csqlvb1la" path="res://keypad/scenes/keypad/KeypadButton.tscn" id="1"]
[ext_resource type="Script" path="res://keypad/scenes/keypad/Keypad.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ccixirbtv4ie5" path="res://keypad/assets/white tick.png" id="3"]
[ext_resource type="AudioStream" uid="uid://bedr2ituf6hue" path="res://keypad/assets/pressed_key.wav" id="4"]
[ext_resource type="AudioStream" uid="uid://dkyyogavjpuf0" path="res://keypad/assets/wrong_password.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://c3nudjaeanjdy" path="res://keypad/assets/correct_password.wav" id="7"]

[sub_resource type="BoxMesh" id="1"]
size = Vector3(0.35, 0.55, 0.02)

[sub_resource type="ViewportTexture" id="4"]
viewport_path = NodePath("PasswordViewport")

[node name="Keypad" type="Node3D"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
script = ExtResource("2")

[node name="PressedAudioStream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4")
unit_size = 45.0

[node name="CorrectAudioStream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7")
unit_size = 45.0

[node name="WrongAudioStream" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6")
unit_size = 45.0

[node name="MeshInstance" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.014)
mesh = SubResource("1")

[node name="Keys" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00114202, 0)

[node name="Key1" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, 0.106, 0.107, 1.03398e-24)
number = "1"

[node name="Key2" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, 0, 0.107, 0)

[node name="Key3" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, -0.106, 0.107, 0)
number = "3"

[node name="Key4" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, 0.105675, 0, 0)
number = "4"

[node name="Key5" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, 0, 0, 0)
number = "5"

[node name="Key6" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, -0.105675, 0, 0)
number = "6"

[node name="Key7" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, 0.106, -0.107, 0)
number = "7"

[node name="Key8" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, 0, -0.107, 0)
number = "8"

[node name="Key9" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, -0.106, -0.107, 0)
number = "9"

[node name="KeyClear" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, 0.106, -0.214, 0)
number = "C"

[node name="Key0" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, 0, -0.214, 0)
number = "0"

[node name="KeyEnter" parent="Keys" instance=ExtResource("1")]
transform = Transform3D(1, 0, 8.74228e-08, 0, -1, 0, -8.74228e-08, 0, 1, -0.106, -0.214, 0)
number = "."

[node name="TickMark" type="Sprite3D" parent="Keys/KeyEnter"]
transform = Transform3D(0.1, -3.48787e-17, 8.74228e-09, -3.48787e-17, -0.1, 3.48787e-17, -8.74228e-09, 3.48787e-17, 0.1, -0.006, -0.00399999, -0.008)
flip_h = true
texture = ExtResource("3")

[node name="PasswordViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(40, 18)

[node name="Panel" type="Panel" parent="PasswordViewport"]

[node name="PasswordLabel" type="Label" parent="PasswordViewport"]
offset_top = 21.0
offset_right = 37.0
offset_bottom = 47.0
scale = Vector2(1, -1)
text = "1234"

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.216, 0.00218582)
flip_h = true
flip_v = true
texture = SubResource("4")

[connection signal="finished" from="PressedAudioStream" to="." method="_on_AudioStreamPlayer3D_finished"]
